--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "rxjs_boilerplate",
+  "name": "bl-node",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development"
+    "start": "node node_modules/ts-node/dist/bin.js ./src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/puppeteer": "^1.12.4",
+    "puppeteer": "^1.16.0",
+    "puppeteer-extra": "^2.1.3",
+    "puppeteer-extra-plugin-stealth": "^2.2.2",
     "rxjs": "^6.5.2",
-    "ts-loader": "^6.0.1",
-    "typescript": "^3.4.5",
-    "webpack": "^4.32.0",
-    "webpack-dev-server": "^3.4.1"
+    "ts-node": "^6.2.0",
+    "typescript": "^3.4.5"
   },
-  "devDependencies": {
-    "webpack-cli": "^3.3.2"
-  }
+  "devDependencies": {}
 }
