--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,11 @@
     "compilerOptions": {
         "outDir": "./dist/",
         "noImplicitAny": true,
-        "module": "es6",
+        "module": "commonjs",
         "moduleResolution": "node",
         "sourceMap": true,
-        "target": "es6",
+        "target": "es2017",
+        "allowJs": true,
         "typeRoots": [
             "node_modules/@types"
         ],
